Edit order started.

--- a/src/app/editors/edit-order/edit-order.component.html
+++ b/src/app/editors/edit-order/edit-order.component.html
@@ -1,106 +1,90 @@
 <div class="main-content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header card-header-danger">
-                        <h4 class="card-title">Edit Profile</h4>
-                        <p class="card-category">Complete your profile</p>
-                    </div>
-                    <div class="card-body">
-                        <form>
-                            <div class="row">
-                                <div class="col-md-5">
-                                  <mat-form-field class="example-full-width">
-                                      <input matInput placeholder="Company (disabled)" disabled>
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-3">
-                                    <mat-form-field class="example-full-width">
-                                      <input matInput placeholder="Username">
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-4">
-                                    <mat-form-field class="example-full-width">
-                                      <input matInput placeholder="Email address" type="email">
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Fist Name" type="text">
-                                  </mat-form-field>
-                                </div>
-                                <div class="col-md-6">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Last Name" type="text">
-                                  </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Adress" type="text">
-                                  </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="City" type="text">
-                                  </mat-form-field>
-                                </div>
-                                <div class="col-md-4">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Country" type="text">
-                                  </mat-form-field>
-                                </div>
-                                <div class="col-md-4">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Postal Code" type="text">
-                                  </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                  <label>About Me</label>
-                                  <mat-form-field class="example-full-width">
-                                     <textarea matInput placeholder="Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo."></textarea>
-                                   </mat-form-field>
-                                    <!-- <div class="form-group">
-  
-                                        <div class="form-group">
-                                            <label class="bmd-label-floating"> Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</label>
-                                            <textarea class="form-control" rows="5"></textarea>
-                                        </div>
-                                    </div> -->
-                                </div>
-                            </div>
-                            <button mat-raised-button type="submit" class="btn btn-danger pull-right">Update Profile</button>
-                            <div class="clearfix"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card card-profile">
-                    <div class="card-avatar">
-                        <a href="javascript:void(0)">
-                            <img class="img" src="./assets/img/faces/marc.jpg" />
-                        </a>
-                    </div>
-                    <div class="card-body">
-                        <h6 class="card-category text-gray">CEO / Co-Founder</h6>
-                        <h4 class="card-title">Alec Thompson</h4>
-                        <p class="card-description">
-                            Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
-                        </p>
-                        <a href="javascript:void(0)" class="btn btn-danger btn-round">Follow</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  <div class="container-fluid">
+      <div class="row">
+          <div class="col-12">
+              <div class="card d-flex">
+                  <div class="card-header card-header-primary mb-4 w-50 mx-auto">
+                      <ng-container *ngIf="(order$ | async) as order">
+                          <h4 *ngIf="order.id==0" class="card-title">Create new order</h4>
+                          <h4 *ngIf="order.id!=0" class="card-title">Edit order</h4>
+                      </ng-container>
+                  </div>
+                  <div class="row">
+                      <div *ngIf="(order$ | async) as order" class="col-6 offset-3">
+                          <form #orderForm="ngForm" (ngSubmit)="onUpdate(orderForm, order)">
+                              <div class="form-group">
+                                  <label for="name">{{attributes.name}}</label>
+                                  <input name="name" [(ngModel)]="order.name" type="text" class="form-control"
+                                      pattern="[A-ZÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ](.{3,99})" required>
+                                  <div [hidden]="productForm.controls.name?.valid || productForm.controls.name?.pristine"
+                                      class="error-message">
+                                      {{attributes.name}} must be between 4-100 characters and must start with a
+                                      capital letter.
+                                  </div>
+                              </div>
+                              <div class="form-group">
+                                  <label for="type">{{attributes.type}}</label>
+                                  <input name="type" [(ngModel)]="product.type" type="text" class="form-control"
+                                      pattern="[A-ZÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ](.{3,49})" required>
+                                  <div [hidden]="productForm.controls.type?.valid || productForm.controls.type?.pristine"
+                                      class="error-message">
+                                      {{attributes.type}} must be between 4-50 characters and must start with a
+                                      capital letter.
+                                  </div>
+                              </div>
+                              <div class="form-group">
+                                  <label for="catID">{{attributes.catID}}</label>
+                                  <select class="custom-select" [(ngModel)]="product.catID" name="catID">
+                                      <option *ngFor="let category of categoryList$ | async" [value]="category.id">{{category.id}} - {{category.name}}: {{category.description}} </option>
+                                  </select>
+                              </div>
+
+                              <div class="form-group">
+                                  <label for="stock">{{attributes.stock}}</label>
+                                  <input name="stock" [(ngModel)]="product.stock" type="number" class="form-control"
+                                      required>
+                                  <div [hidden]="productForm.controls.stock?.valid || productForm.controls.stock?.pristine"
+                                      class="error-message">
+                                      {{attributes.stock}} is required and can only be a number.
+                                  </div>
+                              </div>
+                              <div class="form-group">
+                                  <label for="description">{{attributes.description}}</label>
+                                  <input name="description" [(ngModel)]="product.description" type="text"
+                                      class="form-control" pattern=".{10,255}" required>
+                                  <div [hidden]="productForm.controls.description?.valid || productForm.controls.description?.pristine"
+                                      class="error-message">
+                                      {{attributes.description}} must be between 10-255 characters.
+                                  </div>
+                              </div>
+                              <div class="form-group">
+                                  <label for="price">{{attributes.price}} in Forints</label>
+                                  <input name="price" [(ngModel)]="product.price" type="number" class="form-control"
+                                      required>
+                                  <div [hidden]="productForm.controls.price?.valid || productForm.controls.price?.pristine"
+                                      class="error-message">
+                                      {{attributes.price}} is required and can only be a number.
+                                  </div>
+                              </div>
+                              <div class="form-group">
+                                  <label class="mr-2" for="featured">Product is {{attributes.featured}}</label>
+                                  <input class="regular-checkbox" name="featured" [(ngModel)]="product.featured"
+                                      type="checkbox">
+                              </div>
+                              <div class="form-group">
+                                  <label class="mr-2" for="active">Product is {{attributes.active}}</label>
+                                  <input class="regular-checkbox" name="active" [(ngModel)]="product.active"
+                                      type="checkbox">
+                              </div>
+                              <button [disabled]="productForm.invalid" [disabled]="clicked" type="submit"
+                                  class="btn btn-primary btn-block btn-lg">
+                                  <i id="saveicon" class="fa fa-save"></i>
+                              </button>
+                          </form>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
-  
+</div>
