--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -79,7 +79,7 @@
                                                     <button class="btn btn-danger" data-toggle="modal"
                                                         data-target="#confirmationDialog"
                                                         (click)=setOrdertoDelete(order)>
-                                                        <i class="fa fa-trash"></i>
+                                                        <i class="fa fa-trash" [id]="order.id"></i>
                                                     </button>
                                                 </div>
                                         </td>
