--- a/src/app/pages/list-order/list-order.component.scss
+++ b/src/app/pages/list-order/list-order.component.scss
@@ -1,11 +1,9 @@
 .filter {
-
     &__group {
         background-color: rgba(255, 255, 255, .7);
         border-radius: .2rem;
         border: none;
     }
-
     &-button {
         display: inline-block;
         padding: .37rem 1rem;
@@ -14,50 +12,38 @@
         cursor: pointer;
         user-select: none;
         margin: 0 .2rem;
-
         &:hover {
             background-color: rgba(175, 1, 131, 1);
             border: 1px solid rgba(175, 1, 131, 1);
             color: rgba(255, 255, 255, 1);
         }   
     }
-
     &__input {
-        
-        transition: all .2s ease-in-out;
-
-        &:hover {
-            background-color: rgba(255, 255, 255, .5);
-            border: 0;
-            border-radius: .2rem;
-        }
-        &:focus {
-            background-color: rgba(255, 255, 255, .7);
-            border: 0;
-            border-radius: .4rem;
-        }
-    }
-
-    &__select:hover {
-        background-color: rgba(255, 255, 255, .5);
         border: 0;
+        border-radius: .3rem;
+        background-color: rgba(255, 255, 255, .4);
+        transition: all .2s ease-in-out;
+        &:hover { background-color: rgba(255, 255, 255, .7); }
+        &:focus { background-color: rgba(255, 255, 255, 1); }
+    }
+    &__select {
+        cursor: pointer;
+        border: 0;
+        border-radius: .3rem;
+        background-color: rgba(255, 255, 255, .4);
+        transition: all .2s ease-in-out;
+        &:hover { background-color: rgba(255, 255, 255, .7); }
+        &:focus { background-color: rgba(255, 255, 255, 1); }
     }
 }
 
 .th {
-    user-select: none;
     cursor: pointer;
-    
-
-    &:hover {
-        border-bottom: 1px solid rgba(175, 1, 131, 1);
-    }
-
+    user-select: none;
+    &:hover { border-bottom: 1px solid rgba(175, 1, 131, 1); }
     &__active {
         border-bottom: 2px solid rgba(175, 1, 131, 1);
-        &:hover { 
-            border-bottom: 2px solid rgba(175, 1, 131, 1);
-        }
+        &:hover { border-bottom: 2px solid rgba(175, 1, 131, 1); }
     }
 }
 
@@ -68,12 +54,7 @@
 
 .arrow {
     display: none;
-
-    &__active {
-        display: inline-block;
-    }
+    &__active { display: inline-block; }
 }
 
-.action {
-    width: 200px;
-}
+.action { width: 200px; }
