--- a/src/app/pages/edit-category/edit-category.component.html
+++ b/src/app/pages/edit-category/edit-category.component.html
@@ -28,16 +28,8 @@
               The description must be a minimum of 5 and a maximum of 20 characters long! 
           </div>
       </div>
-
-
-      <div class="form-group">
-          <label>active</label><br>
-          <input [(ngModel)]="category.active" name="active" type="checkbox" 
-              class="form-check-input">
-      </div>
-
       
-      <button [disabled]="categorytForm.invalid || updating" class="btn btn-block btn-primary">
+      <button [disabled]="categoryForm.invalid || updating" class="btn btn-block btn-primary">
         <i *ngIf="!updating" class="fa fa-save"></i>
         <i *ngIf="updating" class="fa fa-refresh"></i>
       </button>
