--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -30,6 +30,9 @@
         </form>
       </div>
     </div>
+    <!-- <div *ngIf="numberOfUnpaidOrders$ | async">
+      ͏͏͏͏͏͏͏<p>Aktív rendelések száma: {{ numberOfUnpaidOrders$ | async }}</p>
+  </div> -->
     <table class="table table-striped">
       <thead class="bg-dark text-light">
         <tr>
