--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -29,6 +29,9 @@
                     </button>
                 </form>
             </div>
+            <div class="col-5 mt-0 mb-5">
+                <button class="btn btn-success my-2 my-sm-0" (click)="scroll('summaries')">STATISZTIKA</button>
+            </div>
         </div>
 
         <table class="table table-striped">
@@ -75,5 +78,25 @@
                 </tr>
             </tbody>
         </table>
+        <div class="table-responsive">
+            <table class="table" id="summaries">
+                <thead class="bg-dark text-light">
+                    <th>Összes számla</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <div *ngIf="sumOfUnpaidBills$ | async">
+                        ͏͏͏͏͏͏͏<p class="font-weight-bold">Fizetetlen számlák összege: {{ sumOfUnpaidBills$ | async }}
+                            Ft
+                        </p>
+                    </div>
+                </thead>
+                <tbody>
+                </tbody>
+
+            </table>
+        </div>
     </div>
 </div>
