--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -30,9 +30,10 @@
         </form>
       </div>
     </div>
-    <!-- <div *ngIf="numberOfUnpaidOrders$ | async">
-      ͏͏͏͏͏͏͏<p>Aktív rendelések száma: {{ numberOfUnpaidOrders$ | async }}</p>
+    <!-- <div class="col-5 mt-0 mb-5">
+      <button class="btn btn-success my-2 my-sm-0" (click)="scroll('summaries')">STATISZTIKA</button>
   </div> -->
+
     <table class="table table-striped">
       <thead class="bg-dark text-light">
         <tr>
@@ -76,5 +77,25 @@
         </tr>
       </tbody>
     </table>
+    <div class="table-responsive">
+      <table class="table" id="summaries">
+          <thead class="bg-dark text-light">
+              <th>Összes rendelés</th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+
+              <th></th>
+              <div *ngIf="numberOfUnpaidOrders$ | async">
+                ͏͏͏͏͏͏͏<p>Még nem fizetett rendelések száma: {{ numberOfUnpaidOrders$ | async }}</p>
+            </div>
+          </thead>
+          <tbody>
+          </tbody>
+
+      </table>
+  </div>
+
   </div>
 </div>
