--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -4,106 +4,101 @@
         <div class="col-4 offset-5 mb-5">
             <h2>ÖSSZES TERMÉK</h2>
         </div>
-        <div class="col-12 row">
-            <div class="col-5">
-                <button class="btn btn-success btn-block mt-3 mb-5" [routerLink]="[0]">
-                    <i class="material-icons">add</i> ÚJ TÉTEL LÉTREHOZÁSA
+        <div class="col-12 my-3 mb-3">
+
+            <button class="btn btn-success btn-block mt-3 mb-5" [routerLink]="[0]">
+                <i class="material-icons">add</i> ÚJ TÉTEL LÉTREHOZÁSA
+            </button>
+        </div>
+
+
+        <div class="col-3 mt-0 mb-5">
+            <select [(ngModel)]="filterKey" class="custom-select bg-light">
+                <option *ngFor="let key of filterKeys" [value]="key">
+                    {{ key }}
+                </option>
+            </select>
+        </div>
+
+        <div class="col-4 search-bar mt-0 mb-5">
+            <form class="form-inline my-2 my-lg-0">
+                <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text"
+                    placeholder="Keresés" />
+                <button class="btn btn-success my-2 my-sm-0" type="submit">
+                    <i class="material-icons">manage_search</i> Keresés
                 </button>
-            </div>
-
-
-            <div class="col-3 mt-3 mb-5">
-                <select [(ngModel)]="filterKey" class="custom-select bg-light">
-                    <option *ngFor="let key of filterKeys" [value]="key">
-                        {{ key }}
-                    </option>
-                </select>
-            </div>
-
-            <div class="col-4 search-bar mt-3 mb-5">
-                <form class="form-inline my-2 my-lg-0">
-                    <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text"
-                        placeholder="Keresés" />
-                    <button class="btn btn-success my-2 my-sm-0" type="submit">
-                        <i class="material-icons">manage_search</i> Keresés
-                    </button>
-                </form>
-            </div>
-
-            <div class="col-5 mt-0 mb-5">
-                <button class="btn btn-success my-2 my-sm-0" (click)="scroll('summaries')">STATISZTIKA</button>
-            </div>
+            </form>
         </div>
 
-        <table class="table table-striped">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th (click)="onColumnSelect('id')"> <b>#</b></th>
-                    <th (click)="onColumnSelect('name')"><b>Termék név</b></th>
-                    <th (click)="onColumnSelect('type')"><b>Típus</b></th>
-                    <th (click)="onColumnSelect('catId')"><b>catId</b></th>
-                    <th (click)="onColumnSelect('description')"><b>Leírás</b></th>
-                    <th (click)="onColumnSelect('price')"><b>Ár</b></th>
-                    <th (click)="onColumnSelect('featured')"><b>Kiemelt</b></th>
-                    <th (click)="onColumnSelect('active')"><b>Aktív</b></th>
-                    <th (click)="onColumnSelect('operations')"><b>Műveletek</b></th>
-                    <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
-                        <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
-                    </th>
-
-                </tr>
-            </thead>
-            <tbody>
-                <tr
-                    *ngFor="let product of productList | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
-                    <td>
-                        <span>{{ product.id }}</span>
-                    </td>
-                    <td>{{product.name}} </td>
-                    <td>{{product.type}}</td>
-                    <td>{{product.catId}}</td>
-                    <td>{{product.description}}</td>
-                    <td>{{product.price}}</td>
-                    <td>
-                        <input class="form-control form-control-sm" [(ngModel)]="product.featured" type="checkbox"
-                            disabled>
-                    </td>
-                    <td><input class="form-control form-control-sm" [(ngModel)]="product.active" type="checkbox"
-                            disabled></td>
-                    <td>{{product.operations}}
-                        <div class="btn-group">
-                            <button [routerLink]="[product.id]" class="btn btn-info">
-                                <i class="fa fa-pencil"></i>
-                            </button>
-                            <button (click)="onRemove(product)" class="btn btn-danger">
-                                <i class="fa fa-trash"></i>
-                            </button>
-                        </div>
-                    </td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="table-responsive">
-            <table class="table" id="summaries">
-                <thead class="bg-dark text-light">
-                    <th>Összes termék</th>
-                    <th></th>
-                    <th></th>
-                    <th>Kiemelt termékek</th>
-                    <th>Aktív termékek</th>
-                    <th></th>
-                    <div *ngIf="numberOfActiveProducts$ | async">
-                        ͏͏͏͏͏͏͏<p>Aktív termékek száma: {{ numberOfActiveProducts$ | async }}</p>
-                    </div>
-                </thead>
-                <tbody>
-                </tbody>
-
-            </table>
+        <div class="col-5 mt-0 mb-5">
+            <button class="btn btn-success my-2 my-sm-0" (click)="scroll('summaries')">STATISZTIKA</button>
         </div>
-
     </div>
 
+    <table class="table table-striped">
+        <thead class="bg-dark text-light">
+            <tr>
+                <th (click)="onColumnSelect('id')"> <b>#</b></th>
+                <th (click)="onColumnSelect('name')"><b>Termék név</b></th>
+                <th (click)="onColumnSelect('type')"><b>Típus</b></th>
+                <th (click)="onColumnSelect('catId')"><b>catId</b></th>
+                <th (click)="onColumnSelect('description')"><b>Leírás</b></th>
+                <th (click)="onColumnSelect('price')"><b>Ár</b></th>
+                <th (click)="onColumnSelect('featured')"><b>Kiemelt</b></th>
+                <th (click)="onColumnSelect('active')"><b>Aktív</b></th>
+                <th (click)="onColumnSelect('operations')"><b>Műveletek</b></th>
+                <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
+                    <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
+                </th>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let product of productList | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
+                <td>
+                    <span>{{ product.id }}</span>
+                </td>
+                <td>{{product.name}} </td>
+                <td>{{product.type}}</td>
+                <td>{{product.catId}}</td>
+                <td>{{product.description}}</td>
+                <td>{{product.price}}</td>
+                <td>
+                    <input class="form-control form-control-sm" [(ngModel)]="product.featured" type="checkbox" disabled>
+                </td>
+                <td><input class="form-control form-control-sm" [(ngModel)]="product.active" type="checkbox" disabled>
+                </td>
+                <td>{{product.operations}}
+                    <div class="btn-group">
+                        <button [routerLink]="[product.id]" class="btn btn-info">
+                            <i class="fa fa-pencil"></i>
+                        </button>
+                        <button (click)="onRemove(product)" class="btn btn-danger">
+                            <i class="fa fa-trash"></i>
+                        </button>
+                    </div>
+                </td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="table-responsive">
+        <table class="table" id="summaries">
+            <thead class="bg-dark text-light">
+                <th>Összes termék</th>
+                <th></th>
+                <th></th>
+                <th>Kiemelt termékek</th>
+                <th>Aktív termékek</th>
+                <th></th>
+                <div *ngIf="numberOfActiveProducts$ | async">
+                    ͏͏͏͏͏͏͏<p>Aktív termékek száma: {{ numberOfActiveProducts$ | async }}</p>
+                </div>
+            </thead>
+            <tbody>
+            </tbody>
+
+        </table>
+    </div>
 
 </div>
