--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,60 @@
-/* You can add global styles to this file, and also import other style files */
+.filter {
+    &__group {
+        background-color: rgba(255, 255, 255, .7);
+        border-radius: .2rem;
+        border: none;
+    }
+    &-button {
+        display: inline-block;
+        padding: .37rem 1rem;
+        border: 1px solid rgba(150, 150, 150, .35);
+        border-radius: .15rem;
+        cursor: pointer;
+        user-select: none;
+        margin: 0 .2rem;
+        &:hover {
+            background-color: rgba(175, 1, 131, 1);
+            border: 1px solid rgba(175, 1, 131, 1);
+            color: rgba(255, 255, 255, 1);
+        }   
+    }
+    &__input {
+        border: 0;
+        border-radius: .3rem;
+        background-color: rgba(255, 255, 255, .4);
+        transition: all .2s ease-in-out;
+        &:hover { background-color: rgba(255, 255, 255, .7); }
+        &:focus { background-color: rgba(255, 255, 255, 1); }
+    }
+    &__select {
+        cursor: pointer;
+        border: 0;
+        border-radius: .3rem;
+        background-color: rgba(255, 255, 255, .4);
+        transition: all .2s ease-in-out;
+        &:hover { background-color: rgba(255, 255, 255, .7); }
+        &:focus { background-color: rgba(255, 255, 255, 1); }
+    }
+}
+
+.th {
+    cursor: pointer;
+    user-select: none;
+    &:hover { border-bottom: 1px solid rgba(175, 1, 131, 1); }
+    &__active {
+        border-bottom: 2px solid rgba(175, 1, 131, 1);
+        &:hover { border-bottom: 2px solid rgba(175, 1, 131, 1); }
+    }
+}
+
+.material-icons.md-18 {
+    font-size: 18px;
+    transform: translateY(5px) scale(.7);
+}
+
+.arrow {
+    display: none;
+    &__active { display: inline-block; }
+}
+
+.action { width: 200px; }
