--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -30,9 +30,9 @@
         </form>
       </div>
     </div>
-    <!-- <div class="col-5 mt-0 mb-5">
+    <div class="col-5 mt-0 mb-5">
       <button class="btn btn-success my-2 my-sm-0" (click)="scroll('summaries')">STATISZTIKA</button>
-  </div> -->
+  </div>
 
     <table class="table table-striped">
       <thead class="bg-dark text-light">
