services and edit-customer design

--- a/src/app/pages/edit-customer/edit-customer.component.html
+++ b/src/app/pages/edit-customer/edit-customer.component.html
@@ -4,7 +4,7 @@
 
             <!-- CARD HEADER -->
             <div class="card-header card-header-primary">
-                <h4 class="card-title ">Customer Editor</h4>
+                <h4 class="card-title ">Customer Editor - #{{ customer.id }} {{ customer.lastName }} {{ customer.firstName }}</h4>
             </div>
 
             <!-- CARD BODY -->
