--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -8,7 +8,7 @@
                         <p class="card-category">List of current orders.</p>
                     </div>
                     <div class="card my-0 px-3">
-                        <button [routerLink]="['order/'+'0']" class="btn btn-primary my-3">
+                        <button [routerLink]="['/order/0']" class="btn btn-primary my-3">
                             Create new order
                         </button>
                     </div>
@@ -73,7 +73,7 @@
                                             </ng-container>
                                             <td>
                                                 <div class="btn-group">
-                                                    <button [routerLink]="['order/'+order.id]" class="btn btn-info">
+                                                    <button [routerLink]="['/order', order.id]" class="btn btn-info">
                                                         <i class="fa fa-pencil"></i>
                                                     </button>
                                                     <button class="btn btn-danger" data-toggle="modal"
