listing-product.html modified, buttons and statistics modified

--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -30,7 +30,7 @@
             </form>
         </div>
 
-        <div class="col-5 mt-0 mb-5">
+        <div class="col-5 mt-0 mb-5 d-flex justify-content-end">
             <button class="btn btn-success my-2 my-sm-0" (click)="scroll('summaries')">STATISZTIKA</button>
         </div>
     </div>
@@ -89,7 +89,7 @@
                 <th></th>
                 <th></th>
                 <th>Kiemelt termékek</th>
-                <th>Aktív termékek</th>
+                <th></th>
                 <th></th>
                 <div *ngIf="numberOfActiveProducts$ | async">
                     ͏͏͏͏͏͏͏<p>Aktív termékek száma: {{ numberOfActiveProducts$ | async }}</p>
