--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -5,7 +5,7 @@
     </div>
 
       <div class="col-12 my-3 mb-3">
-        <button class="btn btn-success btn-block mt-3 mb-5 ml-0" style="font-size:14px" [routerLink]="[0]">
+        <button class="btn btn-success btn-block mt-3 mb-5" style="font-size:14px" [routerLink]="[0]">
           <i class="material-icons">add</i> Új rendelés
         </button>
       </div>
@@ -33,16 +33,16 @@
     <div class="col-5 mt-0 mb-5 d-flex justify-content-end">
       <button class="btn btn-success my-2 my-sm-0" (click)="scroll('summaries')">STATISZTIKA</button>
   </div>
-
+</div>
     <table class="table table-striped">
       <thead class="bg-dark text-light">
         <tr>
-          <!-- <th *ngFor="let col of cols">{{ col.text }}</th> -->
-          <th (click)="onColumnSelect('id')"><b>#</b></th>
+          <th *ngFor="let col of cols">{{ col.text }}</th>
+          <!-- <th (click)="onColumnSelect('id')"><b>#</b></th>
           <th (click)="onColumnSelect('customerID')"><b style="font-size: 18px">Vásárlók</b></th>
           <th (click)="onColumnSelect('productID')"><b style="font-size: 18px">Termékek</b></th>
           <th (click)="onColumnSelect('amount')"><b style="font-size: 18px">Mennyiség</b></th>
-          <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th>
+          <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th> -->
           <th id="arrow">
             <i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
             <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
