--- a/src/app/page/listing/listing-order/listing-order.component.scss
+++ b/src/app/page/listing/listing-order/listing-order.component.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+.table {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+}
+
 .bg-dark:hover {
   cursor: pointer,
 }
