--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -37,12 +37,12 @@
     <table class="table table-striped">
       <thead class="bg-dark text-light">
         <tr>
-          <th *ngFor="let col of cols">{{ col.text }}</th>
-          <!-- <th (click)="onColumnSelect('id')"><b>#</b></th>
+          <!-- <th *ngFor="let col of cols">{{ col.text }}</th> -->
+          <th (click)="onColumnSelect('id')"><b>#</b></th>
           <th (click)="onColumnSelect('customerID')"><b style="font-size: 18px">Vásárlók</b></th>
           <th (click)="onColumnSelect('productID')"><b style="font-size: 18px">Termékek</b></th>
           <th (click)="onColumnSelect('amount')"><b style="font-size: 18px">Mennyiség</b></th>
-          <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th> -->
+          <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th>
           <th id="arrow">
             <i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
             <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
