--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
-  <app-header></app-header>
-  <app-sidebar></app-sidebar>
+  <app-header [listItemName]="itemName"></app-header>
+  <app-sidebar (listItemName)="listItemName($event)"></app-sidebar>
   <div class="main-panel">
     <div class="content">
       <div class="container-fluid">
